# research_agent

./: README.md  email_agent.py  init_agent.py  main.py  planner_agent.py  pyproject.toml  requirements.txt  research_manager.py  search_agent.py  writer_agent.py
.github/workflows/: main.yml
